--- a/src/web/templates/report4.html
+++ b/src/web/templates/report4.html
@@ -124,10 +124,10 @@
                 <td>{{ row.year }}</td>
                 <td class="number">{{ "{:,}".format(row.spot_count) if row.spot_count else "0" }}</td>
                 <td class="number positive">
-                    ${{ "{:,}".format(row.total_revenue) if row.total_revenue else "0" }}
+                    ${{ "{:,.0f}".format(row.total_revenue) if row.total_revenue else "0" }}
                 </td>
                 <td class="number">
-                    ${{ "{:,}".format(row.avg_rate) if row.avg_rate else "0" }}
+                    ${{ "{:,.0f}".format(row.avg_rate) if row.avg_rate else "0" }}
                 </td>
                 <td>
                     {% if row.status == 'CLOSED' %}
@@ -169,7 +169,7 @@
                     <tr>
                         <td>{{ sector.sector_name }}</td>
                         <td class="number positive">
-                            ${{ "{:,}".format(sector.total_revenue) if sector.total_revenue else "0" }}
+                            ${{ "{:,.0f}".format(sector.total_revenue) if sector.total_revenue else "0" }}
                         </td>
                         <td class="number">{{ "{:,}".format(sector.spot_count) if sector.spot_count else "0" }}</td>
                     </tr>
@@ -224,7 +224,7 @@
                 <div class="ae-metric">
                     <div class="ae-metric-label">Total Revenue</div>
                     <div class="ae-metric-value">
-                        ${{ "{:,}".format(ae.total_revenue) if ae.total_revenue else "0" }}
+                        ${{ "{:,.0f}".format(ae.total_revenue) if ae.total_revenue else "0" }}
                     </div>
                 </div>
                 <div class="ae-metric">
@@ -234,7 +234,7 @@
                 <div class="ae-metric">
                     <div class="ae-metric-label">Avg Rate</div>
                     <div class="ae-metric-value">
-                        ${{ "{:,}".format(ae.avg_rate) if ae.avg_rate else "0" }}
+                        ${{ "{:,.0f}".format(ae.avg_rate) if ae.avg_rate else "0" }}
                     </div>
                 </div>
                 <div class="ae-metric">
