added pipeline revenue management app

--- a/src/web/templates/base.html
+++ b/src/web/templates/base.html
@@ -206,6 +206,7 @@
             <a href="/report5">Revenue Dashboard</a>
             <a href="/report6">Language Analysis</a>
             <a href="/report7">Market-Language</a>
+            <a href="/sector-management">Sector Management</a>
         </div>
         
         {% block content %}{% endblock %}
